--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,6 +61,7 @@ a {
 	display: flex;
 	flex-flow: row unwrap;
 	justify-content: center;
+	
 	min-height: 100vh;
 }
 
@@ -71,4 +72,5 @@ a {
 
 .dashboard_item_right {
 	width: 100%;
+	vertical-align: top;
 }
