--- a/src/layouts/SideBar/index.module.css
+++ b/src/layouts/SideBar/index.module.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	width: 350px;
 	height: 100%;
-	margin: 40px;
+	margin: 10px 40px;
 	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
 	padding: 20px 10px;
