--- a/src/components/common/TagsInput/index.module.css
+++ b/src/components/common/TagsInput/index.module.css
@@ -31,12 +31,23 @@
 }
 
 .tags_input_item {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-weight: 900;
-	padding: 10px;
+	padding: 7px 10px;
 	background-color: #ed9f09;
 	color: white;
 	box-shadow: 0px 0px 2px 2px rgba(140, 67, 3, 0.183);
 	border-radius: 10px;
+}
+.tags_input_item_text {
+}
+
+.tags_input_item_close_icon {
+	padding-left: 20px;
+	font-size: 20px;
+	cursor: pointer;
 }
 
 .tags_input_items_list input {
