--- a/src/components/common/TagsInput/index.module.css
+++ b/src/components/common/TagsInput/index.module.css
@@ -41,11 +41,13 @@
 	box-shadow: 0px 0px 2px 2px rgba(140, 67, 3, 0.183);
 	border-radius: 10px;
 }
-.tags_input_item_text {
-}
 
 .tags_input_item_close_icon {
-	padding-left: 20px;
+	margin: 3px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding-left: 10px;
 	font-size: 20px;
 	cursor: pointer;
 }
