--- a/src/components/common/List/index.module.css
+++ b/src/components/common/List/index.module.css
@@ -1,13 +1,17 @@
+.list_wrapper {
+	display: flex;
+	flex-direction: column;
+	border: 3px solid rgba(205, 205, 205, 0.404);
+	border-radius: 10px;
+	padding: 20px 10px;
+}
+
 .list_items {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: nowrap;
-	border: 3px solid rgba(205, 205, 205, 0.404);
-	border-radius: 10px;
-	padding: 20px 10px;
-	height: auto;
 }
 
 .list_item {
@@ -46,6 +50,37 @@
 
 .list_item_link:hover,
 .list_item_link_active {
+	background-color: #903101e6;
+	color: white;
+}
+
+.list_pagination {
+	margin-top: 55px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.list_pagination_icon {
+	display: flex;
+	align-items: center;
+	padding: 0 30px;
+	font-size: 30px;
+	color: #903101e6;
+}
+
+.list_pagination_item {
+	border-radius: 10%;
+	background-color: #fae28c3a;
+	color: #903101e6;
+	border: 3px solid rgba(205, 205, 205, 0.404);
+	padding: 3px 9px;
+	margin: 0 10px;
+	font-size: 5px;
+}
+
+.list_pagination_item:hover,
+.list_pagination_item_active {
 	background-color: #903101e6;
 	color: white;
 }
