--- a/src/components/login/index.module.css
+++ b/src/components/login/index.module.css
@@ -28,3 +28,10 @@
 	border-radius: 10px;
 	box-shadow: 0px 0px 2px 2px rgba(140, 67, 3, 0.183);
 }
+
+@media screen and (max-width: 700px) {
+	.login_wrapper {
+		width: 80%;
+		height: 90%;
+	}
+}
