--- a/src/components/login/index.module.css
+++ b/src/components/login/index.module.css
@@ -27,6 +27,7 @@
 	border: 3px solid rgba(157, 79, 11, 0.654);
 	border-radius: 10px;
 	box-shadow: 0px 0px 2px 2px rgba(140, 67, 3, 0.183);
+	cursor: pointer;
 }
 
 @media screen and (max-width: 700px) {
