Made "Home" a reusable component

--- a/src/components/Common/Home/index.module.css
+++ b/src/components/Common/Home/index.module.css
@@ -13,8 +13,12 @@
 .home_section_analytics {
 	display: flex;
 	flex-direction: column;
-
 	margin: 10px;
+	cursor: pointer;
+}
+
+.home_section_analytics:hover {
+	background-color: #fae28c3a;
 }
 
 .home_section_analytics_title {
@@ -27,4 +31,8 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+}
+
+.home_section_analytics_body_value {
+	margin: 5px;
 }
