--- a/src/components/Common/PostForm/index.module.css
+++ b/src/components/Common/PostForm/index.module.css
@@ -29,7 +29,7 @@
 	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
 	height: 50px;
-	width: 95%;
+	width: 100%;
 	margin: auto;
 }
 
@@ -38,8 +38,13 @@
 	padding: 20px;
 	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
-	width: 95%;
+	width: 100%;
 	margin: auto;
+}
+
+.form_input:focus,
+.form_textarea:focus {
+	border-color: #ed9d093a;
 }
 
 .form_button_wrapper {
