--- a/src/layouts/Navbar/index.module.css
+++ b/src/layouts/Navbar/index.module.css
@@ -51,7 +51,8 @@
 }
 
 .navbar_item_link:hover,
-.navbar_logout:hover {
+.navbar_logout:hover,
+.navbar_item_link_active {
 	border-bottom: 4px solid #ed9f09;
 	transition: 0.4;
 }
