--- a/src/components/Common/PostForm/index.module.css
+++ b/src/components/Common/PostForm/index.module.css
@@ -2,6 +2,7 @@
 	padding: 10px;
 	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
+	padding: 0 20px;
 }
 
 .form {
@@ -14,7 +15,6 @@
 	flex-direction: column;
 	width: 100%;
 	margin: 20px auto;
-	padding: 0 20px;
 }
 
 .form_label {
@@ -47,11 +47,6 @@
 	border-color: #ed9d093a;
 }
 
-.form_button_wrapper {
-	width: 91%;
-	margin: auto;
-}
-
 .form_button {
 	width: 100%;
 	padding: 10px;
@@ -62,4 +57,5 @@
 	border: 3px solid rgba(157, 79, 11, 0.654);
 	border-radius: 10px;
 	box-shadow: 0px 0px 2px 2px rgba(140, 67, 3, 0.183);
+	cursor: pointer;
 }
