--- a/src/components/Common/List/index.module.css
+++ b/src/components/Common/List/index.module.css
@@ -1,15 +1,21 @@
 .list_wrapper {
+	height: calc(100vh - 300px);
 	display: flex;
 	flex-direction: column;
 	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
 	padding: 20px 10px;
+	overflow-y: scroll;
+}
+
+.list_wrapper::-webkit-scrollbar {
+	width: 0;
 }
 
 .list_items {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	flex-wrap: nowrap;
 }
@@ -17,31 +23,31 @@
 .list_item {
 	width: 100%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	gap: 1rem;
 	padding: 5px;
 }
 
-.list_item p {
-	max-width: 450px;
-}
 .list_item span {
-	min-width: fit-content;
+	max-width: 100px;
 }
 
 .list_item p {
+	width: 250px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
-.list_item_links_wrapper {
+.list_item_buttons_wrapper {
 	display: flex;
 }
 
-.list_item_link {
+.list_item_button {
 	min-width: 70px;
+	font-size: 16px;
+	font-weight: 600;
 	text-align: center;
 	padding: 5px;
 	margin: 5px;
@@ -51,14 +57,14 @@
 	border: 3px solid rgba(205, 205, 205, 0.404);
 }
 
-.list_item_link:hover,
-.list_item_link_active {
+.list_item_button:hover,
+.list_item_button_active {
 	background-color: #903101e6;
 	color: white;
 }
 
 .list_pagination {
-	margin-top: 55px;
+	margin-top: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
