--- a/src/layouts/SideBar/index.module.css
+++ b/src/layouts/SideBar/index.module.css
@@ -2,15 +2,20 @@
 	display: flex;
 	flex-direction: column;
 	min-width: 250px;
-	height: 100%;
+	height: calc(100vh - 300px);
 	margin: 0 40px;
 	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
 	padding: 20px 10px;
+	overflow-y: scroll;
+}
+.sidebar_container::-webkit-scrollbar {
+	width: 0;
 }
 
 .sidebar_item {
 	text-align: center;
+	min-height: 40px;
 	padding: 7px;
 	margin: 10px;
 	border: 3px solid rgba(205, 205, 205, 0.404);
