Enhance the folder structure. Create services to manage the APIs. Implement axios instance to prevent attaching the access token to every call. Implmenet services to Create, Update Posts and Series

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,3 +25,11 @@ ul {
 button {
 	cursor: pointer;
 }
+
+*::-webkit-scrollbar {
+	width: 10px;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: #903101e6;
+	border-radius: 10px;
+}
