--- a/src/components/Login/styles/index.module.css
+++ b/src/components/Login/styles/index.module.css
@@ -24,6 +24,12 @@
 	margin: auto;
 }
 
+.errorMsg {
+	color: red;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
 .login_button {
 	width: 100%;
 	padding: 10px;
