--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,3 +36,27 @@ button {
 	background-color: #903101e6;
 	border-radius: 10px;
 }
+
+.quill {
+	border-radius: 10px;
+	overflow: hidden;
+	border: 3px solid rgba(205, 205, 205, 0.404);
+}
+
+.ql-container.ql-snow,
+.ql-toolbar.ql-snow {
+	border: none !important;
+}
+
+.ql-toolbar.ql-snow {
+	border-bottom: 3px solid rgba(205, 205, 205, 0.404) !important;
+}
+
+.ql-editing {
+	left: 50% !important;
+	transform: translateX(-50%) !important;
+}
+
+.ql-editing::before {
+	content: "Enter URL" !important;
+}
