Implement Tags, Keywords page list.

--- a/src/components/Dashboard/styles/tagsList.module.css
+++ b/src/components/Dashboard/styles/tagsList.module.css
@@ -1,11 +1,11 @@
-.list_wrapper {
+.tags_list_wrapper {
+	max-width: 1300px;
 	height: calc(100vh - 170px);
+	padding: 20px;
 	display: flex;
 	flex-direction: column;
-	border: 3px solid rgba(205, 205, 205, 0.404);
 	border-radius: 10px;
-	padding: 20px 10px;
-	overflow-y: scroll;
+	margin: 80px auto;
 }
 
 .list_items {
@@ -27,13 +27,6 @@
 
 .list_item span {
 	max-width: 100px;
-}
-
-.list_item p {
-	width: 250px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
 
 .list_item_buttons_wrapper {
