Implement Primary Button.

--- a/src/components/Dashboard/styles/index.module.css
+++ b/src/components/Dashboard/styles/index.module.css
@@ -4,14 +4,15 @@
 	margin: auto;
 	flex-direction: column;
 	padding-top: 75px;
+	padding: 75px 20px 0 20px;
 }
 
 .dashboard_main {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
 	gap: 1rem;
-	width: 100%;
 }
 
 .dashboard_content {
